--- a/src/scss/paihuen/_footer.scss
+++ b/src/scss/paihuen/_footer.scss
@@ -6,6 +6,7 @@
     display: inline-block;
     list-style-type: none;
     text-align: center;
+    color: white;
     a {
       padding: 10px;
       text-transform: uppercase;
