--- a/src/scss/paihuen/_footer.scss
+++ b/src/scss/paihuen/_footer.scss
@@ -1,16 +1,24 @@
-.footer{
-	img{
-		width: 100%;
-	}
-	ul li {
-    display: inline-block;
-    list-style-type: none;
+footer{
+	height: 650px;
+    width: 100%;
+    background: url('../images/footer-image.png') no-repeat center center;
+    background-size: cover;
     text-align: center;
-    color: white;
-    a {
-      padding: 10px;
-      text-transform: uppercase;
-      font-family: 'Montserrat', sans-serif;
-    }
-  }
+    .footer{
+		ul li {
+	    display: inline-block;
+	    list-style-type: none;
+	    text-align: center;
+	    color: white;
+	    a {
+	      padding: 10px;
+	      text-transform: uppercase;
+	      font-family: 'Montserrat', sans-serif;
+	    }
+	    .fab{
+	    	color: white;
+	    	font-size: 30px;
+	    }
+	  }
+	}  
 }
