--- a/src/scss/paihuen/_footer.scss
+++ b/src/scss/paihuen/_footer.scss
@@ -5,20 +5,26 @@ footer{
     background-size: cover;
     text-align: center;
     .footer{
+    	padding-top: 326px;
 		ul li {
+		font-size: 25px;
 	    display: inline-block;
 	    list-style-type: none;
 	    text-align: center;
 	    color: white;
+	    @media (min-width: 576px) {
+		font-size: 15px;
+		}
 	    a {
 	      padding: 10px;
 	      text-transform: uppercase;
 	      font-family: 'Montserrat', sans-serif;
 	    }
-	    .fab{
-	    	color: white;
-	    	font-size: 30px;
-	    }
 	  }
-	}  
+	}
+    div i{
+    	color: white;
+		font-size: 30px;
+		margin: 5px;
+    }	 
 }
