--- a/src/scss/paihuen/pages/_home.scss
+++ b/src/scss/paihuen/pages/_home.scss
@@ -2,6 +2,9 @@
 	height: 100px;
 	width: auto;
 }
+.title{
+	text-align: center;
+}
 
 .circle{
 	background-color: #096f56;
@@ -9,42 +12,26 @@
 	width: 250px;
     border-radius: 50%;
 	color: #fffadd;
-	text-aling: center;
-	i{
-		font-size:30px;
-	}
-	.fa-bus{
-		font-size: 50px;
-	}
-	.fa-home{
-		font-size: 50px;
-		text-aling: center;
-	}
-	.fa-map-marked-alt{
-		font-size: 50px;
-	}
+	text-align: center;
+    line-height: 20;
 }
-
+.circle i{
+	font-size: 9rem;
+}
 .texto{
 	margin-left: auto;
 	margin-right: auto;
 	float: left;
 }
 
-.columns{
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	margin: 5px 0;
+.medio{
+	margin: 20px 0;
 }
 
-.column {
-	flex: 1;
-	margin-right: auto;
-	margin-left: auto;
-	text-aling: center;
-	padding: 10px;
-	&:first-child { margin-left: 0; }
-	&:last-child { margin-right: 0; }
-	
+.slider{
+	margin: 50px 0;
+}
+
+.cards_home{
+	border: 2px solid black;
 }
