--- a/src/scss/paihuen/pages/_home.scss
+++ b/src/scss/paihuen/pages/_home.scss
@@ -66,6 +66,7 @@
 	border: 2px solid black;
 	margin: 20px;
 	padding: 30px;
+	text-aling: center;
 	h3{
 		text-align: center;
 	}
@@ -75,6 +76,8 @@
 	.btn__cards{
 		background-color: #096f56;
 		margin: 0 auto;
+		border: none;
+		text-transform: uppercase;
 	}
 }
 
