--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,7 +21,7 @@
 @import "lib/screen-xxs.scss";
 
 
-
+// Paihuen Mapu web side//
 @import "paihuen/menu";
 @import "paihuen/footer";
 @import "paihuen/general";
