--- a/src/scss/paihuen/_footer.scss
+++ b/src/scss/paihuen/_footer.scss
@@ -4,21 +4,24 @@ footer{
     background: url('../images/footer-image.png') no-repeat center center;
     background-size: cover;
     text-align: center;
-    .footer{
+    .footer-menu{
     	padding-top: 326px;
 		ul li {
-		font-size: 25px;
+		font-size: 30px;
 	    display: inline-block;
 	    list-style-type: none;
 	    text-align: center;
 	    color: white;
 	    @media (min-width: 576px) {
-		font-size: 15px;
+		font-size: 20px;
 		}
 	    a {
 	      padding: 10px;
 	      text-transform: uppercase;
 	      font-family: 'Montserrat', sans-serif;
+	      text-decoration: none;
+	      color: white;
+	      font-weight: 700;
 	    }
 	  }
 	}
