--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -16053,6 +16053,11 @@ nav {
 
 .header_menu ul li a a:hover {
   text-decoration: underline;
+  color: #29525c;
+}
+
+.header_menu ul li a a:active {
+  color: #096f56;
 }
 
 .header_menu .logo {
@@ -16072,16 +16077,16 @@ footer .footer-menu {
 }
 
 footer .footer-menu ul li {
-  font-size: 40px;
+  font-size: 25px;
   display: inline-block;
   list-style-type: none;
   text-align: center;
   color: white;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
   footer .footer-menu ul li {
-    font-size: 20px;
+    font-size: 15px;
   }
 }
 
@@ -16094,20 +16099,25 @@ footer .footer-menu ul li a {
   font-weight: 700;
 }
 
+footer .footer-menu ul li a:hover {
+  text-decoration: underline;
+  color: #096f56;
+}
+
 footer div i {
   color: white;
-  font-size: 30px;
+  font-size: 25px;
   margin: 5px;
 }
 
 footer .information--footer p {
   color: white;
-  font-size: 30px;
+  font-size: 25px;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
   footer .information--footer p {
-    font-size: 20px;
+    font-size: 15px;
   }
 }
 
@@ -16188,6 +16198,7 @@ body h5 {
 
 .title {
   text-align: center;
+  margin-top: 50px;
 }
 
 .circle {
@@ -16216,14 +16227,12 @@ body h5 {
 }
 
 .slider {
-  margin: 50px 0;
+  margin: 50px 0 0 0;
 }
 
 .cards_home {
-  border: 2px solid black;
   margin: 20px;
   padding: 30px;
-  text-aling: center;
 }
 
 .cards_home h3 {
@@ -16232,6 +16241,7 @@ body h5 {
 
 .cards_home p {
   text-align: center;
+  font-size: 17px;
 }
 
 .cards_home .btn__cards {
@@ -16241,7 +16251,34 @@ body h5 {
   text-transform: uppercase;
 }
 
+.cards_home button {
+  text-aling: center;
+}
+
 .description_home {
   text-aling: center;
+}
+
+.google_maps iframe {
+  width: 100%;
+  padding: 0;
+}
+
+.form_contact {
+  background: url(../images/formulario-fondo.png?8fd69e0c833eee67f1bc5040e10b9568) no-repeat center center;
+  background-size: cover;
+  padding: 50px;
+}
+
+.form_contact .title_form {
+  color: white;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.form_contact .mensaje_form {
+  width: 100%;
+  height: 300px;
+  padding: 10px;
 }
 
