--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -16024,25 +16024,44 @@ ul.page-nav li:last-child {
 
 nav {
   background-color: #08342d;
-  height: 100px;
   width: 100%;
+  padding: 10px;
+}
+
+nav .menu_principal {
+  display: contents;
 }
 
 .header_menu {
   width: 100%;
   font-family: 'Montserrat';
   font-weight: 700;
+  display: none;
+}
+
+@media only screen and (min-width: 810px) {
+  .header_menu {
+    display: block;
+  }
 }
 
 .header_menu ul {
-  float: right;
   list-style-type: none;
+  float: right;
 }
 
 .header_menu ul li {
   display: inline-block;
   list-style-type: none;
   text-align: right;
+}
+
+@media only screen and (max-width: 809px) {
+  .header_menu ul li {
+    display: block;
+    text-align: right;
+    line-height: 2;
+  }
 }
 
 .header_menu ul li a {
@@ -16062,6 +16081,28 @@ nav {
 
 .header_menu .logo {
   margin-top: 12px;
+}
+
+/**RESPONSIVE MENU**/
+
+@media only screen and (max-width: 809px) {
+  .mobile_menu a {
+    height: 40px;
+    width: 100%;
+    color: white;
+    display: block;
+    text-align: center;
+    line-height: 40px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width: 810px) {
+  .mobile_menu a {
+    display: none;
+  }
 }
 
 footer {
@@ -16086,7 +16127,7 @@ footer .footer-menu ul li {
 
 @media (max-width: 576px) {
   footer .footer-menu ul li {
-    font-size: 15px;
+    font-size: 12px;
   }
 }
 
@@ -16118,6 +16159,7 @@ footer .information--footer p {
 @media (max-width: 576px) {
   footer .information--footer p {
     font-size: 15px;
+    padding: 5px;
   }
 }
 
@@ -16179,6 +16221,10 @@ body h5 {
   text-align: center;
   font-size: 18px;
   line-height: 2;
+}
+
+.pichula {
+  color: gray;
 }
 
 .banner-text {
