--- a/src/scss/paihuen/_footer.scss
+++ b/src/scss/paihuen/_footer.scss
@@ -13,7 +13,7 @@ footer{
 	    text-align: center;
 	    color: white;
 	    @media (max-width: 576px) {
-		font-size: 15px;
+		font-size: 12px;
 		}
 
 	    a {
@@ -41,6 +41,7 @@ footer{
     		font-size: 25px;
     	    @media (max-width: 576px) {
 			font-size: 15px;
+			padding: 5px;
 			}		
     	}
     }	 
