--- a/src/scss/paihuen/_menu.scss
+++ b/src/scss/paihuen/_menu.scss
@@ -3,7 +3,7 @@ nav{
     width: 100%;
     padding: 10px;
     .menu_principal{
-      display: contents;
+      
     }
 }
 
@@ -25,7 +25,7 @@ nav{
     text-align: right;
     @media only screen and (max-width: 809px){
       display: block;
-      text-align: right;
+      text-align: center;
       line-height: 2;
     }
     a {
