--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -16160,7 +16160,7 @@ footer .information--footer p {
 }
 
 body {
-  background-color: #fffadd;
+  background-color: #fff;
   margin: 0;
 }
 
@@ -16179,7 +16179,7 @@ body h5 {
 }
 
 body {
-  background-color: #fffadd;
+  background-color: #fff;
   margin: 0;
 }
 
