--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -26,6 +26,7 @@
 @import "paihuen/footer";
 @import "paihuen/general";
 @import "paihuen/general";
+@import "paihuen/pages/_page_style";
 @import "paihuen/pages/_home";
 
 
