--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -16199,8 +16199,13 @@ body h5 {
 
 .page_style {
   margin: 170px auto 0 auto;
-  background-color: pink;
   width: 70%;
+}
+
+@media (max-width: 576px) {
+  .page_style {
+    width: 85%;
+  }
 }
 
 .home--banner {
