--- a/src/scss/paihuen/pages/_home.scss
+++ b/src/scss/paihuen/pages/_home.scss
@@ -4,10 +4,17 @@
     height: 720px;
     padding-top: 460px;
     padding-left: 120px;
+    @media only screen and (max-width: 768px){
+    	padding-top: 200px; 
+    }
    .title_banner{
     	font-family: 'Montserrat', sans-serif;
     	font-size: 26px;
     	text-align: center;
+    	@media only screen and (max-width: 768px){
+    		font-size: 20px;
+    		text-decoration: center
+    	}
     }
     p{
     	color: white;
@@ -15,18 +22,43 @@
 	    text-align: center;
 	    font-size: 18px;
 	    line-height: 2;
+    	@media only screen and (max-width: 768px){
+    		font-size: 12px;
+    		text-decoration: center
+    	}	    
     }
 }
 
-.pichula{
-	color: gray;
+@media only screen and (max-width: 768px){
+    .mobile-menu a{
+      height: 40px;
+      width: 100%;
+      color: white;
+      display: block;
+      text-align: center;
+      line-height: 40px;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-size: 20px;
+    }
+  }
+
+@media only screen and (min-width: 767px){
+  .mobile-menu a{
+    display: none;
+  }
 }
+
 .banner-text{
 	background-color: #0a3234;
 	height: 170px;
 	width: 680px;
 	padding: 30px;
 	opacity: 0.8;
+	@media only screen and (max-width: 768px){
+    	width: 450px;
+    	padding: 15px;
+   	}
 	h4{
 		text-transform: uppercase;
 	    color: white;
