--- a/src/scss/paihuen/_general.scss
+++ b/src/scss/paihuen/_general.scss
@@ -1,12 +1,13 @@
 body{
-	background-color: #fff;
+	background-color: #fffadd;
 	margin:0;
+	padding: 0;
 	p{
 		font-family: 'Raleway', sans-serif;
 	}
 	h1, h2, h3, h4, h5{
 		font-family: 'Montserrat', sans-serif;
 		color: #03313a;
-		text-aling: center;
+		text-align: center;
 	}
 }
