--- a/src/scss/paihuen/_general.scss
+++ b/src/scss/paihuen/_general.scss
@@ -5,7 +5,7 @@ body{
 	p{
 		font-family: 'Raleway', sans-serif;
 	}
-	h1, h2, h3, h4, h5{
+	h1, h2, h3, h4, h5, h6{
 		font-family: 'Montserrat', sans-serif;
 		color: #03313a;
 		text-align: center;
