--- a/src/scss/paihuen/_general.scss
+++ b/src/scss/paihuen/_general.scss
@@ -3,11 +3,15 @@ body{
 	margin:0;
 	padding: 0;
 	p{
-		font-family: 'Raleway', sans-serif;
+		font-family: 'Roboto Condensed', sans-serif;
+		font-size: 14px;
 	}
-	h1, h2, h3, h4, h5, h6{
+	h1, h2, h3{
 		font-family: 'Montserrat', sans-serif;
 		color: #03313a;
 		text-align: center;
+	}
+	h4, h5, h6{
+		font-family: 'Raleway', sans-serif; 
 	}
 }
