--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,6 +27,7 @@
 @import "paihuen/general";
 @import "paihuen/general";
 @import "paihuen/pages/_page_faq";
+@import "paihuen/pages/_page_contact";
 @import "paihuen/pages/_home";
 
 
