--- a/src/scss/paihuen/_general.scss
+++ b/src/scss/paihuen/_general.scss
@@ -5,13 +5,16 @@ body{
 	p{
 		font-family: 'Roboto Condensed', sans-serif;
 		font-size: 14px;
+		font-weight: 400;
 	}
 	h1, h2, h3{
 		font-family: 'Montserrat', sans-serif;
 		color: #03313a;
 		text-align: center;
+		font-weight: 900;
 	}
 	h4, h5, h6{
-		font-family: 'Raleway', sans-serif; 
+		font-family: 'Raleway', sans-serif;
+		font-weight: 700;
 	}
 }
