--- a/src/scss/paihuen/pages/_page_contact.scss
+++ b/src/scss/paihuen/pages/_page_contact.scss
@@ -1,3 +1,17 @@
+
 .banner-contact{
 	margin-top: 70px;
+}
+
+.title--contact{
+	position: absolute;
+    line-height: 8;
+    text-transform: uppercase;
+    color: white;
+    font-size: 94px;
+    font-weight: 600;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 40px;
+    line-height: 12;
+    margin-left: 100px;
 }
